<resources>
    <string name="app_name">Favorite Places</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="overRVtext">No Favorite Places found. kindly add one.</string>
    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Happy Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyBd8ejAXZ6HUEgr3i7V29HAlJW_RhS_k7o</string>
</resources>