<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlacesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_addplace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomToolbarStyle"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_addplace">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_title"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_title">

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_date"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size"
                    android:onClick="et_date"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_date">

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_location"
                    android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size"

                    />
                <!--
                   android:focusable="false"
                    android:onClick="et_Location"
                    android:focusableInTouchMode="false"
                -->



        </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="tv_current_location"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:text="Select Current Location"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/add_screen_text_add_image_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/iv_place_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location" />

            <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_place_image"
            android:layout_width="@dimen/add_screen_place_image_size"
            android:layout_height="@dimen/add_screen_place_image_size"
            android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
            android:background="@drawable/shape_image_view_border"
            android:padding="@dimen/add_screen_place_image_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/add_screen_image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_location" />

        <TextView
            android:id="@+id/tv_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/add_screen_text_add_image_padding"
            android:text="@string/text_add_image"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/add_screen_text_add_image_textSize"
            android:textStyle="bold"
            android:onClick="tv_add_image"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toEndOf="@+id/iv_place_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
            app:layout_constraintVertical_bias="0.019" />

        <Button
            android:id="@+id/btn_save"
            android:onClick="btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
            android:background="@drawable/shape_button_rounded"
            android:gravity="center"
            android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
            android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
            android:text="@string/btn_text_save"
            android:textColor="@color/white_color"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_place_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>